# Synapselib

./: CMakeLists.txt  Perceptron.py.txt  SECURITY.md  bindings.cpp  library.cpp  library.h  test.py
